--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -1045,7 +1045,7 @@ footer p.copy {
 }
 
 div.shadow {
-	display: block;
+	display: none;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -1172,7 +1172,7 @@ div.shadow form label span {
 }
 
 div.shadow div.comm {
-	display: block;
+	display: none;
 	position: absolute;
 	left: 50%;
 	top: 140px;
