--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -853,13 +853,13 @@ footer {
 }
 
 .wrapper .content.new section div.row span span {
-  display: block;
-  line-height: 17px;
-  width: 147px;
-  color: #b5bcc3;
-  font-size: 14px;
-  font-weight: 400;
-  margin: 10px 0 0 0;
+	display: block;
+	line-height: 17px;
+	width: 147px;
+	color: #b5bcc3;
+	font-size: 14px;
+	font-weight: 400;
+	margin: 10px 0 0 0;
 }
 
 .wrapper .content.new section div.row div.photo {
@@ -873,14 +873,14 @@ footer {
 }
 
 .wrapper .content.new section div.row input[type=submit] {
-  background: #1a9385;
-  padding: 8px 39px;
-  border-radius: 6px;
-  color: #fff;
-  font-size: 18px;
-  cursor: pointer;
-  border: 0;
-  margin: 20px 0 0 0;
+	background: #1a9385;
+	padding: 8px 39px;
+	border-radius: 6px;
+	color: #fff;
+	font-size: 18px;
+	cursor: pointer;
+	border: 0;
+	margin: 20px 0 0 0;
 }
 
 .wrapper .content.new section {
@@ -1185,26 +1185,100 @@ div.shadow div.comm {
 
 div.shadow div.comm form {
 	padding: 0;
+	border-bottom: 1px #c6ccd2 solid
 }
 
 div.shadow div.comm p.title {
 	text-transform: uppercase;
 	font-weight: 600;
 	color: #393635;
-	padding: 0px 0px
+	padding: 0px 0px;
+	text-align: center;
 }
 
 div.shadow div.comm input {
 	padding-left: 10px;
 	background: 0;
 	width: 554px;
+	background: #fff;
+	margin: 21px 0px 24px 0px;
 }
 
 div.shadow div.comm input:hover, div.shadow div.comm input.active {
-	background: 0;
+	background: none;
+	background-color: #fff;
 }
 
-div.shadow div.comm input[type=textarea] {
+div.shadow div.comm textarea {
 	height: 76px;
-	padding-top: 5px;
+	width: 569px;
+	border: 2px #c6ccd2 solid;
+	border-radius: 6px;
+	padding: 1px 0 0 7px;
+	font-size: 16px;
+}
+
+div.shadow form > textarea::-webkit-input-placeholder {
+	color: #c6ccd2;
+	font-style: italic;
+	font-family: 'Open Sans';
+}
+
+div.shadow div.comm textarea::-moz-placeholder {
+	color: #c6ccd2;
+	font-style: italic;
+	font-family: 'Open Sans';
+}
+
+div.shadow div.comm textarea:-moz-placeholder {
+	color: #c6ccd2;
+	font-style: italic;
+	font-family: 'Open Sans';
+}
+
+div.shadow div.comm textarea:-ms-input-placeholder {
+	color: #c6ccd2;
+	font-style: italic;
+	font-family: 'Open Sans';
+}
+
+div.shadow div.comm input[type=submit] {
+	color: #fff;
+	font-weight: 600;
+	font-size: 16px;
+	border-radius: 6px;
+	cursor: pointer;
+	background: #65abd0;
+	padding: 15px 56px;
+	width: auto;
+	margin: 14px 0 0 269px;
+}
+
+div.shadow div.comm form > .stars span {
+	display: block;
+	height: 22px;
+	width: 21px;
+	margin: 0 8px 0 0;
+	background: url(../img/star-b.png) no-repeat 0 0;
+	float: left;
+	cursor: pointer;
+}
+
+div.shadow div.comm form > .stars span:hover, div.shadow div.comm form > .stars span.active {
+	background-position: 0 -22px;
+}
+
+div.shadow div.comm article .stars span {
+	display: block;
+	height: 12px;
+	width: 12px;
+	margin: 0 4px 0 0;
+	background: url(../img/star.png) no-repeat 0 0;
+	background-size: 24px;
+	float: left;
+	cursor: pointer;
+}
+
+div.shadow div.comm article .stars span:hover, div.shadow div.comm article .stars span.active {
+	
 }
