--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -318,7 +318,7 @@ div.last .next {
 	border-bottom: solid 1px #f2f5f8;
 }
 
-.wrapper .content section.items .search input[type=text], .wrapper .content section.items .search select {
+.wrapper .content section.items .search input[type=text], .wrapper .content section.items .search .select {
 	border-radius: 18px;
 	border: 2px #c6ccd2 solid;
 }
@@ -330,6 +330,7 @@ div.last .next {
 	background: url(../img/search-ico.png) no-repeat 10px 8px;
 	color: #383737;
 	font-size: 14px;
+  margin: 0 30px 0 0;
 }
 
 .wrapper .content section.items .search input[type=text]::-webkit-input-placeholder {
@@ -381,9 +382,8 @@ div.last .next {
 	height: 80px;
 }
 
-.wrapper .content section.items .sort select {
-	border: 2px #c6ccd2 solid;
-	border-radius: 6px;
+.wrapper .content section.items .sort .select {
+	margin: 20px 0 0 0;
 }
 
 .wrapper .content section.items .sort > select {
@@ -1328,3 +1328,53 @@ div.shadow .last-comm a {
 	display: block;
 	margin: 117px auto 0;
 }
+
+.select {
+  display: inline-block;
+  padding: 0 5px 0 8px;
+  line-height: 32px;
+  color: #383737;
+  font-size: 14px;
+  font-weight: 600;
+  border: 2px #c6ccd2 solid;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  height: 32px;
+  background: #fff;
+}
+
+.select:after {
+    background: url(http://stifurak.com/coin/img/select.png) no-repeat center center;
+  content: '';
+  display: block;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 11px;
+  top: 11px;
+}
+
+.select .options {
+  display: block;
+  position: relative;
+  margin: 0 !important;
+  top: 0;
+  opacity: 0;
+  border-radius: 7px;
+  left: -2px;
+  border: 2px #c6ccd2 solid;
+  overflow: hidden;
+  background: #fff;
+  z-index: 999;
+}
+
+.select .options span {
+  display: block;
+  padding: 0 9px 0 9px;
+}
+
+.select .options span:hover {
+  background: #DBE1E7;
+}
+
