--- a/numismatists/css/style.css
+++ b/numismatists/css/style.css
@@ -12,16 +12,6 @@ a {
 	color: rgb(121, 156, 218);
 }
 
-select {
-	-webkit-appearance: none;
-	-moz-appearance: none !important;
-	-moz-appearance: none !important;
-	text-indent: 0.01px !important; 
-	text-overflow: '' !important;
-	-ms-appearance: none !important;
-	appearance: none !important;
-}
-
 nav, menu, ul {
 	list-style: none;
 }
@@ -51,7 +41,7 @@ label.checkbox input[type=checkbox] {
 	display: none;
 }
 
-.unselect, .prev, .next, label, .toggle-switcher {
+.unselect, .prev, .next, label, .toggle-switcher, .select {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
@@ -974,6 +964,121 @@ footer {
 	margin: 17px 0 4px 0;
 }
 
+.wrapper .profile section {
+  width: 983px;
+}
+
+.wrapper .content.ad section .tabs {
+  border-bottom: 1px #dbdfe2 solid;
+}
+
+.wrapper .content.ad section .tabs .tab {
+  border-radius: 7px 7px 0 0;
+  background: #dbdfe2;
+  display: inline-block;
+  color: #393635;
+  padding: 8px 24px;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 0 7px 0 0;
+  cursor: pointer;
+}
+
+.wrapper .content.ad section .tabs .tab.active, .wrapper .content.ad section .tabs .tab:hover {
+  background: #24aa98;
+  color: #fff;
+}
+
+.wrapper .content.ad section .options {
+  margin: 20px 0 30px 0;
+}
+
+.wrapper .content.ad section .options label span {
+  margin: 0 30px 0 -4px;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.wrapper .content.ad section .options button {
+  padding: 5px 14px;
+  border: 2px #c6ccd2 solid;
+  border-radius: 7px;
+  color: #c6ccd2;
+  background: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  margin: 0 30px 0 0;
+}
+
+.wrapper .content.ad section .options button.active, .wrapper .content.ad section .options button:hover {
+  border: 2px #3590c0 solid;
+  color: #4597C2;
+}
+
+.wrapper .content.ad section article.item div.info {
+  padding: 0 0 0 157px;
+}
+
+.wrapper .content.ad section article.item div.info p.title {
+  font-size: 19px;
+  font-weight: 600;
+  color: #383737;
+  line-height: 29px;
+}
+
+.wrapper .content.ad section article.item div.info p.price {
+  font-size: 21px;
+  color: #383737;
+  font-weight: 900;
+  margin: 9px 0 5px 0;
+  font-family: 'PT Sans', serif;
+}
+
+.wrapper .content.ad section article.item .checkbox img {
+  width: 100%;
+}
+
+.wrapper .content.ad section article.item .checkbox {
+  float: left;
+  height: 23px;
+  margin: 38px 0 0 0;
+}
+
+.wrapper .content.ad section article.item {
+  border-bottom: 1px #f2f5f8 solid;
+  padding: 0 0 25px 0;
+  margin: 0 0 25px 0;
+}
+
+.wrapper .content.ad section article.item a {
+  font-size: 15px;
+  font-weight: 600;
+  color: #24aa98;
+  margin: 0 30px 0 0;
+}
+
+.wrapper .content.ad section article.item select {
+  font-size: 15px;
+  font-weight: 600;
+  color: #24aa98;
+  border: 2px #c6ccd2 solid;
+  border-radius: 7px;
+  padding: 4px 21px 4px 6px;
+  background: url(../img/select-green.png) no-repeat 47px center;
+  cursor: pointer;
+}
+
+.wrapper .content.ad section article.item label span {
+  display: block;
+  width: 91px;
+  height: 91px;
+  margin: -40px 0 0 3px;
+  border: 1px #E8E8E8 solid;
+  padding: 7px;
+  border-radius: 7px;
+}
+
 footer .wrapper {
 	background: #383737;
 }
@@ -1215,7 +1320,7 @@ div.shadow div.comm textarea {
 	width: 569px;
 	border: 2px #c6ccd2 solid;
 	border-radius: 6px;
-	padding: 1px 0 0 7px;
+	padding: 7px 0 0 7px;
 	font-size: 16px;
 }
 
@@ -1345,7 +1450,7 @@ div.shadow .last-comm a {
 }
 
 .select:after {
-    background: url(http://stifurak.com/coin/img/select.png) no-repeat center center;
+  background: url(http://stifurak.com/coin/img/select.png) no-repeat center center;
   content: '';
   display: block;
   height: 10px;
@@ -1377,4 +1482,3 @@ div.shadow .last-comm a {
 .select .options span:hover {
   background: #DBE1E7;
 }
-
