--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -590,7 +590,7 @@ header button {
 
 .block-9 article {
 	padding: 0 10px 0 10px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 
 .block-9 article:after {
@@ -608,10 +608,12 @@ header button {
 	background: #cfeef7;
 	text-shadow: 0 1px 0 #FCFCFC;
 	display: inline-block;
+  cursor: pointer;
 }
 
 .block-9 article p:nth-child(2) {
-	padding: 0 0 0 10px;
+	padding: 0 0 15px 10px;
+  display: none;
 }
 
 .block-9 article p span {
