--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -640,16 +640,16 @@ header button {
 
 .block-call .wrapper div p {
 	text-align: center;
-	padding: 100px 0px 0 0px;
+	padding: 76px 0px 0 0px;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 24px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
 
 .block-call .wrapper .phones {
-	margin: 16px 0 0 160px;
-	padding: 16px 0 0 115px;
-	background: url(../img/block-call-ico.png) no-repeat left top;
+  margin: 12px 0 0 163px;
+  padding: 5px 0 9px 110px;
+  background: url(../img/block-call-ico.png) no-repeat left top;
 }
 
 .block-call .wrapper div div > span {
@@ -659,12 +659,11 @@ header button {
 
 .block-call div span span {
 	font-size: 28px;
-
 }
 
 .block-call div button {
 	position: absolute;
-	top: 160px;
+	top: 135px;
 	right: 60px;
 }
 
