--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -260,7 +260,8 @@ header button {
 
 .block-2 {
 	background: #f6f6f6;
-	margin: 0 0 60px 0;
+	margin: 0px 0 40px 0;
+  padding: 0 0 15px 0;
 }
 
 .block-2 h1 {
@@ -334,6 +335,13 @@ header button {
 	padding: 0 0 15px 20px
 }
 
+.block-3 h2 span {
+  background: #cfeef7;
+  padding: 2px 6px 5px 6px;
+  border-radius: 5px;
+  color: rgba(0, 0, 0, 0.48);
+}
+
 .block-3 .wrapper div {
 	float: left;
 	margin: 0 20px 0 0;
@@ -369,8 +377,8 @@ header button {
 }
 
 .block-3 ul.minus {
-	color: #81774A;
-	background: #FFEE9E url(../img/block-3-minus.png) no-repeat right bottom;
+	color: #595232;
+	background: #FFF2B6 url(../img/block-3-minus.png) no-repeat right bottom;
 	border-radius: 0 0 6px 6px;
 	background-size: 36%;
 }
@@ -515,7 +523,7 @@ header button {
 
 .block-7 .list-col2 div.row {
 	display: table;
-	padding: 0 25px 20px 0;
+	padding: 0 25px 20px 25px;
 }
 
 .block-7 .list-col2 div.row div.img {
@@ -538,9 +546,9 @@ header button {
 }
 
 .block-8 {
-	margin-bottom: 60px;
+	margin-bottom: 40px;
 	background: #f6f6f6;
-	padding: 20px 0 20px 0;
+	padding: 15px 0 5px 0;
 }
 
 .block-8 h1 {
