--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -95,7 +95,7 @@ nav.top ul li:hover, nav.top ul li.active {
 }
 
 header {
-	height: 180px;
+	height: 146px;
 	padding: 40px 0 0 0;
 }
 
@@ -195,23 +195,37 @@ header button {
 .block-1 div ul li {
 	float: left;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 22px;
-	margin: 30px 48px 30px 48px;
+	font-size: 18px;
+	margin: 30px 31px 30px 31px;
+	text-align: center;
+}
+
+.block-1 div ul li:first-child {
+	margin-left: 0;
+}
+
+.block-1 div ul li:last-child {
+	margin-right: 0;
 }
 
 .block-1 div ul li:nth-child(1) {
 	padding: 10px 0px 10px 90px;
-	background: url(../img/icon-1-1.png) no-repeat 0 24px;
+	background: url(../img/icon-1-1.png) no-repeat 0 19px;
 }
 
 .block-1 div ul li:nth-child(2) {
 	padding: 10px 0px 10px 66px;
-	background: url(../img/icon-1-2.png) no-repeat 0 19px;
+	background: url(../img/icon-1-4.png) no-repeat 0 12px;
 }
 
 .block-1 div ul li:nth-child(3) {
+	padding: 10px 0px 10px 66px;
+	background: url(../img/icon-1-2.png) no-repeat 0 14px;
+}
+
+.block-1 div ul li:nth-child(4) {
 	padding: 10px 0px 10px 60px;
-	background: url(../img/icon-1-3.png) no-repeat 0 19px;
+	background: url(../img/icon-1-3.png) no-repeat 0 14px;
 }
 
 .block-1 div ul:after {
