--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -174,13 +174,13 @@ header button {
 }
 
 .block-1 section h1, .block-1 section h2 {
-  font-size: 36px;
-  color: #63a5bb;
-  text-shadow: 0px 2px 0px #e6f9ff;
-  border-radius: 5px;
-  background-color: #cfeef7;
-  padding: 8px 0px 14px 0px;
-  text-align: center;
+	font-size: 36px;
+	color: #63a5bb;
+	text-shadow: 0px 2px 0px #e6f9ff;
+	border-radius: 5px;
+	background-color: #cfeef7;
+	padding: 8px 0px 14px 0px;
+	text-align: center;
 }
 
 .block-1 section h1 {
@@ -275,7 +275,7 @@ header button {
 .block-2 {
 	background: #f6f6f6;
 	margin: 0px 0 40px 0;
-  padding: 0 0 15px 0;
+	padding: 0 0 15px 0;
 }
 
 .block-2 h1 {
@@ -350,10 +350,10 @@ header button {
 }
 
 .block-3 h2 span {
-  background: #cfeef7;
-  padding: 2px 6px 5px 6px;
-  border-radius: 5px;
-  color: rgba(0, 0, 0, 0.48);
+	background: #cfeef7;
+	padding: 2px 6px 5px 6px;
+	border-radius: 5px;
+	color: rgba(0, 0, 0, 0.48);
 }
 
 .block-3 .wrapper div {
@@ -630,12 +630,12 @@ header button {
 	background: #cfeef7;
 	text-shadow: 0 1px 0 #FCFCFC;
 	display: inline-block;
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .block-9 article p:nth-child(2) {
 	padding: 0 0 15px 10px;
-  display: none;
+	display: none;
 }
 
 .block-9 article p span {
@@ -669,9 +669,9 @@ header button {
 }
 
 .block-call .wrapper .phones {
-  margin: 12px 0 0 163px;
-  padding: 5px 0 9px 110px;
-  background: url(../img/block-call-ico.png) no-repeat left top;
+	margin: 12px 0 0 163px;
+	padding: 5px 0 9px 110px;
+	background: url(../img/block-call-ico.png) no-repeat left top;
 }
 
 .block-call .wrapper div div > span {
@@ -687,6 +687,59 @@ header button {
 	position: absolute;
 	top: 135px;
 	right: 60px;
+}
+
+.block-10 h1 {
+	font-size: 32px;
+	text-align: center;
+	padding: 0px 0 30px 0;
+}
+
+.block-10 .table {
+	width: 880px;
+	margin: 0 auto;
+	background: red;
+	padding: 24px 120px;
+	font-family: 'Roboto Condensed', sans-serif;
+	color: #587f8b;
+}
+
+.block-10 .table > div {
+	background: #effbff;
+}
+
+.block-10 .table .title {
+	font-size: 22px;
+	text-align: center;
+	line-height: 80px;
+	height: 80px;
+	background: #336699;
+}
+
+.block-10 .table .ico {
+	height: 100px;
+	background: #336777;
+}
+
+.block-10 .table .desc {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+	height: 40px;
+	background: #337799;
+}
+
+.block-10 .table .price {
+	font-size: 24px;
+	height: 80px;
+	background: #446699;
+}
+
+.block-10 .table .price span {
+	
+}
+
+.block-10 .table .price span:first-child:after {
+	
 }
 
 div.shadow {
