--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -149,7 +149,7 @@ header address ul li {
 	font-style: normal;
 	letter-spacing: 1px;
 	font-weight: 400;
-	font-size: 18px;
+	font-size: 17px;
 }
 
 header address ul li:nth-child(1) {
@@ -162,6 +162,7 @@ header address ul li:nth-child(2) {
 
 header address ul li span {
 	font-weight: 600;
+  font-size: 19px;
 }
 
 header button {
@@ -521,6 +522,7 @@ header button {
 	font-size: 32px;
 	text-align: center;
 	padding: 0 0 30px 0;
+  color: #4a7940;
 }
 
 .block-6 .wrapper div {
@@ -532,6 +534,7 @@ header button {
 
 .block-6 p {
 	padding: 0 0 20px 0;
+  color: #4a7940;
 }
 
 .block-7 {
