--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -669,6 +669,7 @@ header button {
 	color: #7c8f94;
 	background: #effbff;
 	height: 328px;
+	margin-bottom: 60px;
 }
 
 .block-call .wrapper > div:first-child {
@@ -712,6 +713,10 @@ header button {
 	right: 60px;
 }
 
+.block-10 {
+	margin-bottom: 60px;
+}
+
 .block-10 h1 {
 	font-size: 32px;
 	text-align: center;
@@ -719,12 +724,12 @@ header button {
 }
 
 .block-10 .table {
-  width: 900px;
-  margin: 0px 50px;
-  font-family: 'Roboto Condensed', sans-serif;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0 0 10px #DFF6FF;
+	width: 900px;
+	margin: 0px 50px;
+	font-family: 'Roboto Condensed', sans-serif;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 0 0 10px #DFF6FF;
 }
 
 .block-10 .table > div {
@@ -857,46 +862,52 @@ div.shadow {
 }
 
 div.shadow form {
-	display: none;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin: -105px 0 0 -125px;
-	width: 250px;
-	height: 205px;
+	margin: -105px 0 0 -150px;
+	width: 300px;
 	background: #fff;
 	border-radius: 7px;
 }
 
 div.shadow form input{
-	width: 210px;
-	outline: 0;
-	margin: 5px 20px;
-	padding: 10px 0px;
-	border: 0;
-	border-bottom: 2px #EEE solid;
+	width: 230px;
+	margin: 12px 20px;
+	padding: 10px 15px;
+}
+
+div.shadow form input:first-child {
+	margin-top: 15px;
+}
+
+div.shadow form input[type=text] {
+	border-radius: 5px;
+	border: 2px #fafafa solid;
 }
 
 div.shadow form input[type=submit] {
-	margin-top: 20px;
 	border-radius: 5px;
-	padding: 17px;
-	font-size: 16px;
+	padding: 18px 25px 16px 25px;
+	width: 260px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: #fff;
+	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+	font-size: 18px;
 	font-weight: 500;
 	cursor: pointer;
-	background: #EEE;
-	border: 1px #E0E0E0 solid;
-	box-shadow: 0 0 3px #CCCCCC, inset 0 0 5px #FAFAFA;
+	background: #6ac7a3;
 }
 
 div.shadow form input:nth-child(1) {
-	margin-top: 20px;
+	margin-top: 40px;
 }
 
 div.shadow form div.cancel {
 	position: absolute;
-	left: 228px;
-	top: 0px;
+	left: 270px;
+	top: 6px;
 	width: 20px;
 	height: 20px;
 	background: url(../img/cancel.png) no-repeat;
