--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -865,35 +865,46 @@ div.shadow form {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin: -105px 0 0 -150px;
-	width: 300px;
-	background: #fff;
-	border-radius: 7px;
+	margin: -105px 0 0 -160px;
+	padding: 30px 20px 30px 20px;
+	width: 280px;
+	background: #effbff;
+	border-radius: 10px;
 }
 
-div.shadow form input{
-	width: 230px;
-	margin: 12px 20px;
-	padding: 10px 15px;
+div.shadow form span {
+	font-size: 22px;
+	font-family: 'Roboto Condensed', sans-serif;
+	color: #588b77;
+	display: block;
+	padding: 0px 0 5px 20px;
 }
 
-div.shadow form input:first-child {
-	margin-top: 15px;
+div.shadow form p {
+	font-size: 14px;
+	color: #588b77;
+	padding: 0 0 10px 20px;
 }
 
 div.shadow form input[type=text] {
 	border-radius: 5px;
-	border: 2px #fafafa solid;
+	width: 240px;
+	margin: 0 0 12px 0px;
+	padding: 10px 20px;
+	font-size: 18px;
+	color: #49836d;
+	background: #f9feff;
 }
 
 div.shadow form input[type=submit] {
 	border-radius: 5px;
 	padding: 18px 25px 16px 25px;
-	width: 260px;
+	width: 280px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	color: #fff;
 	text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 3px 0px #5aac8c;
 	font-size: 18px;
 	font-weight: 500;
 	cursor: pointer;
@@ -904,13 +915,14 @@ div.shadow form input:nth-child(1) {
 	margin-top: 40px;
 }
 
-div.shadow form div.cancel {
+div.shadow form:after {
+	content: '';
 	position: absolute;
-	left: 270px;
-	top: 6px;
-	width: 20px;
-	height: 20px;
-	background: url(../img/cancel.png) no-repeat;
-	background-size: 115%;
+	left: 302px;
+	top: -12px;
+	width: 32px;
+	height: 32px;
+	border-radius: 10px;
+	background: #f9feff url(../img/cancel.png) no-repeat center center;
 	cursor: pointer;
 }
