--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -853,6 +853,16 @@ header button {
 	background-position: center -270px;
 }
 
+.gallery h1 {
+	font-size: 32px;
+	text-align: center;
+	padding: 0px 0 30px 0;
+}
+
+.gallery ul li {
+	float: left;
+}
+
 div.shadow {
 	display: none;
 	position: fixed;
