--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -268,13 +268,14 @@ header button {
 .block-1 div.sofa {
 	margin: 0 auto;
 	width: 900px;
+	transition: width .3s ease;
 }
 
 .block-1 div.sofa div:nth-child(2) {
 	margin: -338px 0 0 0;
 	width: 50%;
 	overflow: hidden;
-	transition: opacity .2s ease;
+	transition: width .3s ease;
 }
 
 .block-1 div.sofa div:nth-child(3) {
@@ -285,7 +286,7 @@ header button {
 	margin: -32px 0 0 -47px;
 	cursor: default;
 	opacity: .4;
-	transition: opacity .2s ease;
+	transition: opacity .2s ease, left .2s easy;
 }
 
 .block-1 div.sofa:hover div:nth-child(3) {
