--- a/aquaclean/css/style.css
+++ b/aquaclean/css/style.css
@@ -275,7 +275,7 @@ header button {
 	margin: -338px 0 0 0;
 	width: 50%;
 	overflow: hidden;
-	transition: width .3s ease;
+	transition: width .3s;
 }
 
 .block-1 div.sofa div:nth-child(3) {
@@ -286,7 +286,7 @@ header button {
 	margin: -32px 0 0 -47px;
 	cursor: default;
 	opacity: .4;
-	transition: opacity .2s ease, left .2s easy;
+	transition: opacity .3s ease, left .3s;
 }
 
 .block-1 div.sofa:hover div:nth-child(3) {
